<resources>
    <string name="app_name"></string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="featured_title">Featured</string>
    <string name="show_lineup">Lineup</string>
    <string name="venue_upcoming_shows">Upcoming Shows</string>
    <string name="artist_nearby_shows">Nearby Shows</string>
    <string name="artist_all_shows">On Tour</string>
    <string name="artist_bio">Bio</string>
    <string name="artist_youtube">Videos</string>
    <string name="tab_title_your_shows">Recommended</string>
    <string name="tab_title_all_shows">All shows</string>
    <string name="tab_title_nearby">Nearby</string>
    <string name="tab_favorites_artists">Artists</string>
    <string name="tab_favorites_venues">Venues</string>
    <string name="venue_detail_link">Venue Info</string>
    <string name="artist_events_overflow">See All Shows</string>
    <string name="artist_events_no_show">No Scheduled Events</string>
    <string name="artist_videos_overflow">See All Videos</string>
    <string name="artist_videos_overflow_close">See Less Videos</string>
    <string name="artist_bio_overflow">Read Full Bio</string>
    <string name="artist_bio_overflow_close">Close Full Bio</string>
    <string name="ticketbar_options">Options</string>
    <string name="ticketbar_find_ticket">Find Tickets</string>
    <string name="home_menu_search">Search</string>
    <string name="home_menu_legal">Legal &amp; Credits</string>
    <string name="home_menu_contact">Contact</string>
    <string name="home_menu_help">Help</string>
    <string name="home_menu_logout">Logout</string>
    <string name="activity_label_show">Show</string>
    <string name="activity_label_artist">Artist</string>
    <string name="activity_label_favorites">Favorites</string>
    <string name="activity_label_venue">Venue</string>
    <string name="activity_label_location">Your Location</string>
    <string name="activity_label_order_confirmation">Order Confirmation</string>
    <string name="actionbar_drawer_open">Open</string>
    <string name="actionbar_drawer_close">Close</string>
    <string name="account_your_orders_title">Your Orders</string>
    <string name="account_notifications">Notifications</string>
    <string name="account_favorites">Your Favorites</string>
    <string name="account_footer_location_title">Your Location</string>
    <string name="location_current">Current Location</string>
    <string name="location_previous_locations">Previous Locations</string>
    <string name="location_switch">Use Current Location</string>
    <string name="location_unknown">Unknown</string>
    <string name="location_miles_away">%d mi away</string>
    <string name="login_connect_or_create">Connect or Create Account</string>
    <string name="login_facebook_button">Facebook</string>
    <string name="login_google_plus_button">Google</string>
    <string name="login_button_or">or</string>
    <string name="login_connection_problem">Can\'t establish a reliable connection to the server</string>
    <string name="recommendations_favorite_upsell_facebook_button">Connect with Facebook</string>
    <string name="recommendations_favorite_upsell_search_button">Find Your Favorites</string>
    <string name="recommendations_favorite_upsell_small_text">For better recommendations add more favorite artists</string>
    <string name="recommendations_favorite_upsell_large_title">No show recommendations? Lets fix that.</string>
    <string name="recommendations_favorite_upsell_large_text1">Tell us your music \'likes\' via Facebook</string>
    <string name="recommendations_favorite_upsell_large_text2">Or, let us know who you want to see live</string>
    <string name="debug_menu_title">Debug</string>
    <string name="debug_actionbar_title">Debug</string>
    <string name="debug_header_info">INFO</string>
    <string name="debug_header_actions">ACTIONS</string>
    <string name="debug_item_device_uuid">Device ID</string>
    <string name="debug_item_user_id">User ID</string>
    <string name="debug_item_access_token">Access Token</string>
    <string name="debug_item_apid">APID</string>
    <string name="debug_item_urban_airship_id">Urban Airship ID</string>
    <string name="debug_item_environment">Environment</string>
    <string name="debug_item_scan">Scan: %s artist(s)</string>
    <string name="debug_item_commerce_qa_mode">Commerce QA Mode</string>
    <string name="debug_item_commerce_qa_mode_on">On</string>
    <string name="debug_item_commerce_qa_mode_off">Off</string>
    <string name="debug_item_commerce_session_recording">Record Commerce Session</string>
    <string name="debug_item_commerce_session_recording_on">Stop</string>
    <string name="debug_item_commerce_session_recording_off">Start</string>
    <string name="recommendations_title_personal">Recommended for you</string>
    <string name="recommendations_title_popular">Popular shows</string>
    <string name="search_input_hint_default">Events, Artists, Venues</string>
    <string name="search_input_hint_artists">Search Artists</string>
    <string name="search_input_hint_artists_venues">Search Artists, Venues</string>
    <string name="city_search_input_hint">Search cities by name</string>
    <string name="view_empty_list_retry_button">Retry</string>
    <string name="youtube_video_play">Play Video</string>
    <string name="no_ticket_offerings">No Tickets Available...</string>
    <string name="ticket_offerings">Ticket Options</string>
    <string name="tickets_third_party_toast">Transferring you to a third party website that sells tickets for this event.</string>
    <string name="share_chooser_title">Share</string>
    <string name="share_template_show">$HEADLINE_ARTIST is playing $VENUE on $SHORT_DATE. Who\'s coming with me? $LINK</string>
    <string name="share_template_venue">Check out upcoming shows at $VENUE on Live Nation! $LINK</string>
    <string name="share_template_artist">Check out upcoming shows from $ARTIST on Live Nation! $LINK</string>
    <string name="share_template_order_confirmation">I am going to see $HEADLINE_ARTIST at $VENUE on $SHORT_DATE. Who\'s coming with me? $LINK</string>
    <string name="box_office_tab_transit">Parking &amp; Transit</string>
    <string name="box_office_tab_general">Box Office</string>
    <string name="box_office_directions">Directions</string>
    <string name="box_office_parking_info">Parking Info</string>
    <string name="box_office_public_transit_info">Public Transit Info</string>
    <string name="box_office_general_info">General Info</string>
    <string name="box_office_misc_info">Misc</string>
    <string name="box_office_will_call_info">Will Call</string>
    <string name="box_office_general_rules">General Rules</string>
    <string name="box_office_child_rules">Child Rules</string>
    <string name="url_error_bad_entity">Item not found</string>
    <string name="url_error_no_conneciton">Internet connection required</string>
    <string name="url_error_platform">Please try again later</string>
    <string name="url_error_bad_url">Bad URL</string>
    <plurals name="order_confirmation_title_detail">
        <item quantity="one">1 Ticket</item>
        <item quantity="other">%1$d Tickets</item>
    </plurals>
    <plurals name="order_confirmation_quantity">
        <item quantity="one">Congrats! You’ve got a ticket to</item>
        <item quantity="other">Congrats! You’ve got %1$d tickets to</item>
    </plurals>
    <string name="order_confirmation_details_title">Order Details</string>
    <string name="order_confirmation_number">Order Number</string>
    <string name="order_confirmation_date">Date &amp; Time</string>
    <string name="order_confirmation_venue_name">Venue</string>
    <string name="order_confirmation_seats">Seats</string>
    <string name="order_confirmation_cost">Purchase Total</string>
    <string name="order_confirmation_note">Confirmation</string>
    <string name="order_confirmation_note_fmt">You\'ll receive an email at %1$s with complete ticket info.</string>
    <string name="confirmation_action_tag_line_add_to_calendar">Need a reminder?</string>
    <string name="confirmation_action_tag_line_ride_share">Arrive in style</string>
    <string name="confirmation_action_ride_share">Book a Ride</string>
    <string name="confirmation_action_tag_line_share">Brag, Boast. Share</string>
    <string name="confirmation_action_tag_line_split_cost">Buying for friends?</string>
    <string name="confirmation_action_split_cost">Get Paid Back</string>
    <string name="confirmation_action_tag_line_seat_upgrade">Want a better seat?</string>
    <string name="confirmation_action_seat_upgrade">Get an Upgrade</string>
    <string name="no_messages">No messages</string>
    <string name="inbox_title">Notifications</string>
    <string name="message_title">Featured</string>
    <string name="mark_read">Mark Read</string>
    <string name="add_to_calendar">Add To Calendar</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="inbox_refresh_failed_dialog_title">Unable to retrieve new messages</string>
    <string name="inbox_refresh_failed_dialog_message">Please try again later</string>
    <string name="menu_deselect_all">Deselect all</string>
    <string name="menu_select_all">Select all</string>
    <string name="cab_selection">%d Selected</string>
    <string name="message_cta_default">Go</string>
    <string name="notif_type_on_sale">NOW ON SALE</string>
    <string name="notif_type_announcement">GOES ON SALE</string>
    <string name="notif_type_last_minute">LAST MINUTE</string>
    <string name="notif_type_presale">PRESALE NOW</string>
    <string name="notif_type_in_venue">LIVE FEED</string>
    <string name="notif_type_featured">FEATURED</string>
    <string name="notif_date_now">NOW</string>
    <string name="notif_event_info_format" formatted="false">%s - %s</string>
    <string name="notif_event_details_format" formatted="false">%s at %s</string>
    <string name="notif_error_loading_message">We had an issue loading this notification\'s message.\nPlease check your connectivity.</string>
    <string name="notif_no_notification_title">You have no notifications.</string>
    <string name="rating_dialog_rate_us">Rate Us Highly</string>
    <string name="rating_dialog_dont_ask_again">Don\'t Show This Again</string>
    <plurals name="rating_dialog_subtitle">
        <item quantity="one">We\'re glad you got a ticket. If your experience with Live Nation has been positive, please rate us on Google Play.</item>
        <item quantity="other">We\'re glad you got tickets. If your experience with Live Nation has been positive, please rate us on Google Play.</item>
    </plurals>
    <string name="cash_call_to_action">Get Paid Back</string>
    <string name="cash_powered_by">Powered by Square Cash</string>
    <string name="cash_field_hint_card_number">Credit Card Number</string>
    <string name="cash_field_hint_card_month">MM</string>
    <string name="cash_field_hint_card_year">YY</string>
    <string name="cash_field_hint_card_cvv">CVV</string>
    <string name="cash_field_hint_card_zip">Zip Code</string>
    <string name="cash_enter_card_text">Next, add a bank by entering a Visa or Mastercard debit card.</string>
    <string name="cash_verification_code_text_fmt">Cool! We\'ve texted your code to %1$s.</string>
    <string name="cash_verification_code_hint">Verification Code</string>
    <string name="cash_resend_verification_code">Resend verification code?</string>
    <string name="cash_marketing_tagline">We\'ll do the work – and the math</string>
    <string name="cash_marketing_line_1">100% free. Safe and secure.</string>
    <string name="cash_marketing_line_2">All you need is a debit card.</string>
    <string name="cash_marketing_cta">Sounds good!</string>
</resources>