<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home_notifications_item"
        android:icon="@drawable/notifications_normal"
        android:showAsAction="always"
        android:title="@string/account_notifications" />
    <item
        android:id="@+id/menu_home_search_item"
        android:icon="@drawable/ic_menu_search_holo_light"
        android:showAsAction="always"
        android:title="@string/home_menu_search" />
    <item
        android:id="@+id/menu_home_faq_item"
        android:showAsAction="never"
        android:title="@string/home_menu_faq" />
    <item
        android:id="@+id/menu_home_legal_item"
        android:showAsAction="never"
        android:title="@string/home_menu_legal" />
    <item
        android:id="@+id/menu_home_debug_item"
        android:showAsAction="never"
        android:title="@string/debug_menu_title" />

</menu>