<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/outer_padding"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/inter_item_padding_large"
        android:gravity="center"
        android:textAppearance="@style/Cash.Text.Header1"
        android:text="@string/cash_enter_card_text"/>

    <EditText
        android:id="@+id/fragment_cash_onboarding_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        android:imeOptions="actionNext|flagNoExtractUi"
        android:nextFocusForward="@+id/fragment_cash_onboarding_card_month"
        android:textSize="18sp"
        android:hint="@string/cash_field_hint_card_number">

        <requestFocus />

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inter_item_padding_medium"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/fragment_cash_onboarding_card_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/cash_field_hint_card_month"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:inputType="number"
            android:nextFocusForward="@+id/edittext_card_year" />

        <EditText
            android:id="@+id/fragment_cash_onboarding_card_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/gap_medium"
            android:gravity="center"
            android:hint="@string/cash_field_hint_card_year"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:inputType="number"
            android:nextFocusForward="@+id/fragment_cash_onboarding_card_cvv" />

        <EditText
            android:id="@+id/fragment_cash_onboarding_card_cvv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/gap_medium"
            android:gravity="center"
            android:hint="@string/cash_field_hint_card_cvv"
            android:inputType="number"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:nextFocusForward="@+id/fragment_cash_onboarding_card_postal"/>

    </LinearLayout>

    <EditText
        android:id="@+id/fragment_cash_onboarding_card_postal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inter_item_padding_medium"
        android:inputType="number"
        android:imeOptions="actionGo|flagNoExtractUi"
        android:gravity="center"
        android:hint="@string/cash_field_hint_card_zip"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inter_item_padding_large"
        android:src="@drawable/cash_powered_by"
        android:contentDescription="@string/cash_powered_by"/>

</LinearLayout>