<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/outer_padding"
    android:gravity="center">

    <TextView
        android:id="@+id/fragment_cash_onboarding_verify_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/inter_item_padding_large"
        android:gravity="center"
        android:textAppearance="@style/Cash.Text.Header1"
        android:text="@string/cash_verification_code_text_fmt"/>

    <EditText
        android:id="@+id/fragment_cash_onboarding_verify_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="phone"
        android:imeOptions="actionGo"
        android:textSize="18sp"
        android:hint="@string/cash_verification_code_hint">

        <requestFocus />

    </EditText>

    <Button
        android:id="@+id/fragment_cash_onboarding_verify_resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/ln.text.small.italic"
        android:textColor="@drawable/selector_text_ln_red"
        android:text="@string/cash_resend_verification_code"
        android:background="?android:selectableItemBackground"
        android:visibility="invisible"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inter_item_padding_large"
        android:src="@drawable/cash_powered_by"
        android:contentDescription="@string/cash_powered_by"/>

</LinearLayout>