<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gap_medium"
        android:minWidth="310dp"
        android:orientation="vertical"
        android:background="@drawable/cash_explanation_header_bg"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/gap_large"
            android:layout_marginRight="@dimen/gap_large"
            android:text="@string/cash_call_to_action"
            android:textAppearance="@style/ln.text.large.bold.white"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/gap_large"
            android:layout_marginRight="@dimen/gap_large"
            android:text="@string/cash_marketing_tagline"
            android:textAppearance="@style/ln.text.medium.white"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/gap_medium"
        android:layout_marginRight="@dimen/gap_medium"
        android:layout_marginBottom="@dimen/gap_small"
        android:textAppearance="@style/ln.text.medium"
        android:gravity="center"
        android:text="@string/cash_marketing_line_1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/gap_medium"
        android:layout_marginRight="@dimen/gap_medium"
        android:layout_marginBottom="@dimen/gap_small"
        android:textAppearance="@style/ln.text.medium"
        android:gravity="center"
        android:text="@string/cash_marketing_line_2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/gap_medium"
        android:layout_marginRight="@dimen/gap_medium"
        android:layout_marginBottom="@dimen/gap_medium"
        android:layout_gravity="center"
        android:textAppearance="@style/ln.text.small.gray"
        android:drawableLeft="@drawable/cash_powered_by_small"
        android:drawablePadding="@dimen/gap_small"
        android:gravity="center"
        android:text="@string/cash_powered_by"/>

    <View
        style="@style/Divider" />

    <Button
        android:id="@+id/dialog_cash_introduction_button_cta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minimum_pressable"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:textAppearance="@style/ln.text.medium"
        android:textColor="@color/square_green"
        android:text="@string/cash_marketing_cta"/>

</LinearLayout>