<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_vertical_margin"
              android:paddingRight="@dimen/activity_vertical_margin"
              android:paddingStart="@dimen/activity_vertical_margin"
              android:paddingEnd="@dimen/activity_vertical_margin">

    <TextView
        style="@style/recommendations_upsell_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/ln.text.small"
        android:text="@string/recommendations_favorite_upsell_large_title"/>

    <TextView
        style="@style/recommendations_upsell_general"
        android:textAppearance="@style/ln.text.small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommendations_favorite_upsell_large_text1"/>

    <include
        android:id="@android:id/button1"
        layout="@layout/sub_button_connect_to_facebook"
        android:layout_width="@dimen/recommendations_button_width"
        android:layout_height="@dimen/recommendations_button_height"/>

    <TextView
        style="@style/recommendations_upsell_general"
        android:textAppearance="@style/ln.text.small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommendations_favorite_upsell_large_text2"/>

    <include
        android:id="@android:id/button2"
        layout="@layout/sub_button_search_favorites"
        android:layout_width="@dimen/recommendations_button_width"
        android:layout_height="@dimen/recommendations_button_height"/>

</LinearLayout>