<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/ui_header_transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_current" />


    <TextView
        android:id="@+id/fragment_location_current_primary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fragment_location_current_secondary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <TextView
        style="@style/ui_header_transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_previous_locations" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/underscore_container_height"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ui_underscore_background" />

    <Switch
        android:id="@+id/fragment_location_current_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/your_location"
        android:drawablePadding="8dp"
        android:text="@string/location_switch"
        android:thumb="@drawable/livenation_switch_inner_holo_light"
        android:track="@drawable/livenation_switch_track_holo_light" />


</LinearLayout>